[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ahnsv <ahnsv@bc.edu>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
torch = "^1.9.1"
efficientnet-pytorch = "^0.7.1"
python-multipart = "^0.0.5"
albumentations = "^1.1.0"
torchvision = "^0.10.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"
opencv-python-headless = "4.5.1.48"
make = "^0.1.6.post2"
pyyaml = "6.0"
tensorboardx = "2.5.1"
torchgeometry = "0.1.2"
streamlit = "1.1"
aiofiles = "0.8.0"
asyncio = "^3.4.3"
tqdm = "^4.64.1"
aiohttp = "^3.8.3"
gpustat = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
